# United_Com_Search

./: .env.example  .gitignore  pyproject.toml
src/award_scout/: config.py  models.py  monitors.py  search_logger.py  session_manager.py
src/award_scout/cli/: main.py
src/award_scout/db/: repository.py  schema.py
src/award_scout/scrapers/: american.py  base.py  united.py
src/award_scout/web/: app.py
src/award_scout/web/templates/: index.html  login_credentials.html  login_mfa.html  post_back.html  results.html
