[project]
name = "award_scout"
version = "0.1.0"
description = "US airline award miles flight search tool — login, search, filter, monitor"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
]

[project.scripts]
award-scout = "award_scout.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
